[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
base64 = "0.22"
rand = "0.8"
env_logger = "0.10"